fix(docs): [SNS] JS 补充 openid 和 uid 的区别
Closes #1676

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -807,7 +807,7 @@ Todo 的 `whereCreated`（创建 Todo 时的位置）是一个 `{{geoPointObject
 
 {{link_to_blog_password_reset}}
 
-{% block text_logInOrSignUp_with_authData %}{% endblock %}
+{% block sns_authdata %}{% endblock %}
 
 {% if node != 'qcloud' and node != 'us' %}
 #### 设置手机号码
