LeanEngine: 增加 Java 运行环境对内存的特殊需求；更新实时通信对云引擎文件链接 (#1688)

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -21,6 +21,8 @@
 - [PHP](leanengine_webhosting_guide-php.html)
 - [Java](leanengine_webhosting_guide-java.html)
 
+{% block runtime_description %}{% endblock %}
+
 ## 项目骨架
 
 {% block project_constraint %}{% endblock %}
