chore: hide Demos that don't apply to TAB users. (#1689)

--- a/templates/pages/demo.html
+++ b/templates/pages/demo.html
@@ -2,7 +2,6 @@
 <div ng-controller="DemoCtrl">
   <div class="row">
     <div class="col-md-12">
-
       <div class="doc-home-title">
         {% if node=='qcloud' %}
         <h1 class="font-logo">
@@ -38,16 +37,12 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4" ng-repeat ="demo in displayDemos">
+    <div class="col-md-4" ng-repeat ="demo in displayDemos{% if node=='qcloud' %} | filter: {qcloudShow: true}{% endif %}">
       <div class="demo-card">
         <h1>
           {{demo.name}}
-          <span class="pull-right label label-primary" ng-show="demo.type=='ios'">iOS</span>
-          <span class="pull-right label label-success" ng-show="demo.type=='android'">Android</span>
-          <span class="pull-right label label-warning" ng-show="demo.type=='unity'">Unity</span>
-          <span class="pull-right label label-danger" ng-show="demo.type=='winphone'">Windows Phone</span>
-          <span class="pull-right label label-default" ng-show="demo.type=='js'">JavaScript</span>
-          <span class="pull-right label label-info" ng-show="demo.type=='node'">Node.js</span>
+          <span class="pull-right label label-primary"">{{plats[demo.type]}}</span>
+          
         </h1>
         <p class="demo-desc">{{demo.desc}}</p>
         <!-- <a href="{{demo.downlink}}" class="btn btn-default">下载</a>
