fix(docs): [推送] iOS 使用过期证书推送会报错 The iOS certificate file is expired or disabled (#1694)

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -61,6 +61,7 @@
         <li><a href="faq.html#Android_应用进程被杀掉后无法收到推送消息">Android 应用进程被杀掉后无法收到推送消息</a></li>
         <li><a href="ios_push_cert.html#上传证书失败">为何无法上传 iOS 推送证书</a></li>
         <li><a href="realtime_guide-objc.html#duplicate_message_notification">为何在 iOS 上离线消息重复推送了两次？</a></li>
+        <li><a href="ios_push_cert.html#证书过期">推送报错 The iOS certificate file is expired or disabled.</a></li>
       </ul>
     </div>
   </div>
