--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -199,14 +199,14 @@ isHome: true
             <span>UI 库 ChatKit 使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="chatkit-android.html">Android</a></li>
-              <li><a href="chatkit-ios.html">Objective-C</a></li>
+              <li><a href="chatkit-ios.html">iOS</a></li>
             </ul>
           </li>
   	  <li>
             <span>直播＋聊天解决方案 LiveKit 使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="livekit-android.html">Android</a></li>
-              <li><a href="livekit-ios.html">Objective-C</a></li>
+              <li><a href="livekit-ios.html">iOS</a></li>
             </ul>
           </li>
         </ul>
@@ -247,7 +247,7 @@ isHome: true
             <span>消息推送开发指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="android_push_guide.html">Android</a></li>
-              <li><a href="ios_push_guide.html">Objective-C</a></li>
+              <li><a href="ios_push_guide.html">iOS</a></li>
               <li><a href="leanstorage_guide-js.html#Push_通知">JavaScript</a></li>
             </ul>
           </li>
