--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,6 +13,11 @@ isHome: true
       <div class="form-group">
         <input id="site-search" name="q" type="text" class="form-control input-lg" placeholder="&#xf17a 输入错误代码、关键字来搜索&hellip;">
       </div>
+      <!-- <ul class="list-keyword">
+        <li>热门</li>
+        <li><a href="/search.html?q=小程序" target="_blank">小程序</a></li>
+        <li></li>
+      </ul> -->
     </form>
     {% endif %}
 </div>
@@ -372,13 +377,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-4 col-md-4">
         <h3>SDK API Docs</h3>
         <ul class="list-unstyled">
-          <li><a href="/api-docs/android/index.html" target="_blank">Android SDK API</a></li>
-          <li><a href="/api-docs/iOS/index.html" target="_blank">Objective-C SDK API</a></li>
-          <li><a href="https://leancloud.github.io/javascript-sdk/docs/" target="_blank">JavaScript 数据存储 SDK API</a></li>
-          <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">JavaScript 实时通信 SDK API</a></li>
-          <li><a href="https://leancloud.readthedocs.io/">Python SDK API</a></li>
-          <li><a href="/api-docs/php/" target="_blank">PHP SDK API</a></li>
-          <li><a href="/api-docs/dotnet/Help/index.html">.NET SDK API</a></li>
+        {% include 'templates/include/_apidocs_items.html' %}
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-4 col-md-4">
