feat: IM 错误码整合入错误码详解 (#1750)
* feat: IM 错误码整合入错误码详解

Closes #1632

* fixed nunjucks filter issue

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -32,7 +32,7 @@
               <i class="dashboard-subnav-text">API 文档</i>
             </a>
             <ul class="dropdown-menu">
-            {% include '_apidocs_items.html' %}
+            {% include '_apidocs.html' %}
             </ul>
           </li>
           <li ng-class="{active:currentHtmlPage=='help.html'}">
