fix(docs): AV.initialize => AV.init (#1760)
* fix(docs): AV.initialize => AV.init

Credit: 江博士

* updated code

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -175,7 +175,7 @@
       <h2>JavaScript SDK</h2>
       <ul>
         <li><a href="faq.html#有没有同步_API">有没有同步 API</a></li>
-        <li><a href="faq.html#在_AV_initialize_中用了_Master_Key_但发出去的_AJAX_请求返回_206">在 AV.initialize 中用了 Master Key，但发出去的 AJAX 请求返回 206</a></li>
+        <li><a href="faq.html#在_AV_init_中用了_Master_Key_但发出去的_AJAX_请求返回_206">在 AV.init 中用了 Master Key，但发出去的 AJAX 请求返回 206</a></li>
         <li><a href="faq.html#Web_端会暴露_App_Key_和_App_Id_怎么保证安全性_">Web 端会暴露 App Key 和 App Id，怎么保证安全性</a></li>
         <li><a href="leanstorage_guide-js.html#手机号码登录">如何先验证手机号码再注册</a></li>
       </ul>
