--- a/templates/pages/weapp-domains.html
+++ b/templates/pages/weapp-domains.html
@@ -98,7 +98,7 @@ title: 小程序域名白名单配置 - LeanCloud
             {% else %}
               {% set area = 'n1' %}
             {% endif %}
-            {% set arr = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20] %}
+            {% set arr = [1, 2, 5, 7] %}
             {% for i in arr %}
               <tr>
                 {% if i === 1 %}
