fix: [短信] 短信签名必须申请创建，已不再默认使用应用名称 (#1775)
Closes #1758

并删除「短信余额」的内容。

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -80,7 +80,7 @@
         <li><a href="rest_sms_api.html#短信签名是什么_必须的吗_">短信签名是什么必须的吗</a></li>
         <li><a href="rest_sms_api.html#短信模板审核的原则有哪些_" target="_blank">短信模板审核的原则有哪些</a></li>
         <li><a href="rest_sms_api.html#短信支持港澳台和国外吗_" target="_blank">短信支持港澳台和国外吗</a></li>
-        <li><a href="rest_sms_api.html#短信余额不足有预警通知吗_" target="_blank">短信余额不足有预警通知吗</a></li>
+        <li><a href="rest_sms_api.html#账户余额不足有预警通知吗_" target="_blank">账户余额不足有预警通知吗</a></li>
       </ul>
     </div>
   </div>
