--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -1,3 +1,5 @@
+{% import "views/_helper.njk" as docs %}
+{% import "views/_sms.njk" as sms %}
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
@@ -35,19 +37,14 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 * **造谣诽谤**
 * **我国现行法律、行政法规及政策所禁止的内容**
 
-因此，LeanCloud 需要审核短信内容，并且保留对发送人追究相关法律责任的权力。
+因此 LeanCloud 需要审核短信内容，并且保留对发送人追究相关法律责任的权力。
 
 ## 短信服务配置
 
-{% if node=='qcloud' %}
-从应用级别来控制能否发送短信，进入 `控制台 > 设置 > **安全中心**`，设置 **短信发送** 开关。
+从应用级别来控制能否发送短信，进入 {% if node=='qcloud' %}**控制台** > **设置** > **安全中心**{% else %}[控制台 > 设置 > **安全中心**](/app.html?appid={{appid}}#/security){% endif %}，设置 **短信发送** 开关。
 
-然后点击 `**应用选项**`，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
-{% else %}
-从应用级别来控制能否发送短信，进入 [控制台 > 设置 > **安全中心**](/app.html?appid={{appid}}#/security)，设置 **短信发送** 开关。
+然后点击 {% if node=='qcloud' %}**应用选项**{% else %}[应用选项](/app.html?appid={{appid}}#/permission){% endif %}，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
 
-然后点击 [**应用选项**](/app.html?appid={{appid}}#/permission)，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
-{% endif %}
 
 - 【&check;】用户账号 > **用户注册时，向注册手机号码发送验证短信**<br/>
   开启：调用 AVUser 注册相关的接口时，如果传入了手机号，系统则会自动发送验证短信，然后开发者需要手动调用一下验证接口，这样 `_User` 表中的 `mobilePhoneVerified` 值才会被置为 `true`。<br/>
@@ -96,12 +93,9 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ### 短信购买
 
-{% if node=='qcloud' %}
-短信发送采取实时扣费。如果当前账户没有足够的<u>短信余额</u>（注意不是账户余额），短信将无法发送。
-{% else %}
-短信发送采取实时扣费。如果当前账户没有足够的<u>短信余额</u>（注意不是账户余额），短信将无法发送。充值请进入 [开发者账户 > 财务 > 财务概况](/bill.html#/bill/general)，点击 **短信充值**。
+短信发送采取实时扣费。如果当前账户没有足够的余额，短信将无法发送。{% if node != 'qcloud' %}充值请进入 [开发者账户 > 财务 > 财务概况](/bill.html#/bill/general)，点击 **余额充值**。
 
-同时我们建议设定好短信的 [余额告警](/settings.html#/setting/alert)，以便在第一时间收到短信或邮件获知短信余额不足。
+同时我们建议设定好 [余额告警](/settings.html#/setting/alert)，以便在第一时间收到短信或邮件获知余额不足。
 {% endif %}
 
 ## 验证类
@@ -134,14 +128,14 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ### 注册验证
 
-**用户注册**对所有开发者来说都是非常重要的，为了降低操作难度，越来越多的应用支持使用手机号码来快速注册账户，并且同时会通过短信验证码来核实用户手机号码的有效性。为了满足这一需求，我们将 LeanCloud 内建的[账户系统]({% block builtin_account_url %}{% endblock %})与短信验证码相结合，推出了便捷的「注册验证」功能。其使用步骤如下：
+**用户注册**对所有开发者来说都是非常重要的，为了降低操作难度，越来越多的应用支持使用手机号码来快速注册账户，并且同时会通过短信验证码来核实用户手机号码的有效性。为了满足这一需求，我们将 LeanCloud 内建的 [账户系统]({% block builtin_account_url %}{% endblock %})与短信验证码相结合，推出了便捷的「注册验证」功能。其使用步骤如下：
 
 1. **用户输入手机号以及密码**  
   引导用户正确的输入，建议在调用 SDK 接口之前，验证一下手机号的格式。
 
 2. **调用 AVUser 的注册接口，传入手机号以及密码。**  
   {% block avuser_signup_send_sms %}{% endblock %}
-3. **云端发送手机验证码，并且返回注册成功，但是此时用户的 `mobilePhoneVerified` 依然是 `false`，客户端需要引导用户去输入验证码。**   
+3. **云端发送手机验证码，并且返回注册成功**。但是此时用户的 `mobilePhoneVerified` 依然是 `false`，客户端需要引导用户去输入验证码。   
   
 4. **用户再一次输入验证码**  
   最好验证一下是否为纯数字。
@@ -151,7 +145,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 以上是一个通用的带有手机号验证的注册过程。开发者可以根据需求增加或减少步骤，但是推荐开发者在使用该功能时，首先明确是否需要勾选「验证注册用户手机号码」。因为一旦勾选，只要调用了 AVUser 相关的注册账号，并传入手机号，云端就会自动发送短信验证码。
 
-<div class="callout callout-info">注意：只有使用了 LeanCloud 内建账户系统的应用才能使用这一功能。</div>
+{{ docs.note("注意：只有使用了 LeanCloud 内建账户系统的应用才能使用这一功能。") }}
 
 另外，假如注册的时候并没有强制用户验证手机号，而是在用户使用某一个功能的时候，要求用户验证手机号，也可以调用接口进行「延迟验证」，验证之后 `mobilePhoneVerified` 就会被置为 `true`。
 
@@ -166,11 +160,11 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 <samp ng-non-bindable class="bubble">【AppName】欢迎使用 AppName 服务，您的验证码是 123456，请输入完成验证。</samp>
 
-其中 **AppName** 是应用的名称，必须遵循 [短信签名规范](#签名规范) 中的长度及其他要求，否则会被短信供应商拒绝发送。
+其中【AppName】为短信签名，必须遵循 [短信签名规范](#短信签名) 中的长度及其他要求，否则会被短信供应商拒绝发送。
 
 ## 通知类
 
-通知类短信是很多人每天都可能收到的信息，例如，联通用户从外地进入上海可能会收到如下短信：
+通知类短信非常普遍，例如联通用户从外地进入上海可能会收到如下短信：
 
 <samp ng-non-bindable class="bubble">尊敬的用户：欢迎您来到上海，如需帮助请拨打客服热线10010或登录www.10010.com，优惠订购机票酒店请拨打116114。中国联通</samp>
 
@@ -182,9 +176,9 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 营销类短信是应用开发者与潜在客户沟通、进行产品推广和销售的有效手段。营销类短信也是基于模板来实现的，因此使用时跟 [通知类](#通知类) 使用没有任何本质区别，步骤依次是 [创建模板](#创建模板) > [使用模板](#使用模板)。
 
-营销类短信默认会在短信最后加上「**回复 TD 退订**」，这是运营商的强制要求。
+营销类短信默认会在短信最后加上「**回复TD退订**」，这是运营商的强制要求。
 
-<div class="callout callout-danger">自 2016 年 6 月起，营销类短信不允许由个人用户发送。所有营销类短信必须提供有效的公司或者企业名称，缺失名称将导致营销类短信无法发送。伪造或使用虚假名称将会被追究法律责任。</div>
+{{ docs.alert("自 2016 年 6 月起，营销类短信不允许由个人用户发送。所有营销类短信必须提供有效的公司或者企业名称，缺失名称将导致营销类短信无法发送。伪造或使用虚假名称将会被追究法律责任。") }}
 
 ## 自定义短信内容
 
@@ -202,7 +196,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 - 验证码类型
 - 营销类型
 
-创建短信模板的步骤如下：进入控制台，选择一个应用，再选择 [**消息** > **短信** > **设置**](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。**模板类型如果选择了通知类或者验证类，但短信内容如果涉及营销内容则无法通过审核。**要发送营销类短信请阅读 [营销类](#营销类)。
+要创建短信模板，先进入控制台，选择一个应用，再选择 [消息 > 短信 > 设置](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。**模板类型如果选择了通知类或者验证类，但短信内容如果涉及营销内容则无法通过审核。**要发送营销类短信请阅读 [营销类](#营销类)。
 
 ### 使用模板
 
@@ -214,7 +208,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 模板可以使用<u>自定义变量</u>，如上例中的 <code ng-non-bindable>{{service_name}}</code> 和 <code ng-non-bindable>{{order_id}}</code>，在调用模板时以参数形式传入。模板语法遵循 [Handlebars](http://handlebarsjs.com) 规范。
 
-<div class="callout callout-info">自定义变量的值不允许包含实心括号 `【】` 。</div>
+{{ docs.alert("自定义变量的值不允许包含实心括号 `【】` 。") }}
 
 模板还可以使用<u>系统预留变量</u>，在发送短信发送时，它们会被自动填充：
 
@@ -231,19 +225,10 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 【正确范例】
 
-<samp ng-non-bindable class="bubble">XX房东您好，租客{{guest_name}}（手机号码：{{guest_phone}}）于{{payment_create_time}}向您支付了房租。租金为{{rent_price}}元，房屋地址在{{rent_addr}}。请关注微信公众号： XX租房。XX租房APP下载地址：http://example.com/download.html</samp>
+<samp ng-non-bindable class="bubble">XX房东您好，租客{{guest_name}}（手机号码：{{guest_phone}}）于{{payment_create_time}}向您支付了房租。租金为{{rent_price}}元，房屋地址在{{rent_addr}}。请关注微信公众号：XX租房。XX租房APP下载地址：http://example.com/download.html</samp>
 
-### 短信签名
-
-短信签名是指短信内容里用【】括起来的短信发送方名称。如果没有明确在模板里指定，默认就是你的应用名称。应用名称可以在 [控制台 > 设置 > 基本信息](/app.html?appid={{appid}}#/general) 里修改，并且短信签名**必须出现在短信内容的开头或结尾。**
-
-#### 签名规范
-
- - 签名必须是公司简称、品牌名、网站名，长度控制在 3 到 8 个字符之间。例如签名【应用A】中的 `应用A` 为 3 个字符。
- - 不能有任何非文字字符，也不可以是变量。
- - 不允许全部为英文字符或全部为数字
- - 不需要带上实心方头括号【】
- - 一个应用最多可以拥有 3 个签名（包含审核未通过的签名）。
+<!-- ### 短信签名 -->
+{{ sms.signature("### 短信签名") }}
 
 ### 链接
 
@@ -251,7 +236,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 <samp ng-non-bindable class="bubble">尊敬的会员您好，您的订单（订单号{{orderId}}）已确认支付。5周年庆新品降价！大牌奢品上演底价争霸，低至2折！BV低至888元！阿玛尼低至199元！都彭长款钱包仅售499元！杜嘉班纳休闲鞋仅售1399元！周年庆家居专场千元封顶现已开启！{{download_link}} 客服电话400-881-6609 回复TD退订</samp>
 
-<div class="callout callout-danger">以上通知内容包含了象 <u>打折</u>、<u>降价</u>、<u>仅售</u> 这类营销推广的敏感词语，容易导致审批无法通过，因此请谨慎使用或改用 [营销类短信](#营销类)。</div>
+{{ docs.alert("以上通知内容包含了象 <u>打折</u>、<u>降价</u>、<u>仅售</u> 这类营销推广的敏感词语，容易导致审批无法通过，因此请谨慎使用或改用 [营销类短信](#营销类)。") }}
 
 但是 URL 中可以包含变量，比如：
 
@@ -273,7 +258,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 <samp ng-non-bindable class="bubble">业主还在苦苦等待你的反馈，你认领的房源已超过1小时没有填写核实结果，请尽快登录XX客户端，在“业主--待处理”列表中进行填写。【XX网】</samp>
 
-<div class="callout callout-danger">无论是通知类还是营销类短信，凡包含<u>房源</u>、<u>借贷</u>这类敏感词都被禁止发送。</div>
+{{ docs.alert("无论是通知类还是营销类短信，凡包含<u>房源</u>、<u>借贷</u>这类敏感词都被禁止发送。") }}
 
 ### 营销类模板
 
