--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -204,7 +204,7 @@
             {% endif %}
             <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
             <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
-            <li><a href="user_groups.html">用户群分析指南</a></li>
+            <!-- <li><a href="user_groups.html">用户群分析指南</a></li> -->
             {% if node != 'qcloud' and node != 'us' %}
             <li><a href="leaninsight_guide.html">离线数据分析使用指南</a></li>
             {% endif %}
