--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -98,6 +98,7 @@ isHome: true
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
           <li><a href="weapp.html">在微信小程序中使用 LeanCloud</a></li>
+          <li><a href="https://zhuanlan.zhihu.com/p/24451674">在 LeanCloud 中使用 GraphQL</a></li>
           <li><a href="https://blog.leancloud.cn/1723/" target="_blank">基于 LeanCloud 的一对多、多对多数据建模</a></li>
           <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
           <li><a href="https://blog.leancloud.cn/3993/" target="_blank">使用 LeanCloud 与 React Native 构建原生应用</a></li>
@@ -303,10 +304,10 @@ isHome: true
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
-        <h3>最佳实践</h3>
+        <!-- <h3>最佳实践</h3>
         <ul class="list-unstyled">
           <li><a href="user_groups.html">如何进行用户群分析</a></li>
-        </ul>
+        </ul> -->
         <h3>相关阅读</h3>
         <ul class="list-unstyled">
           <li><a href="faq_list.html">常见问题</a></li>
