--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -267,7 +267,7 @@ INSERT INTO Todo (title, content) VALUES ('工程师周会', '每周工程师会
 ### 关联数据
 
 #### `{{relationObjectName}}`
-<div class="callout callout-danger">如果针对关联数据有查询、排序等复杂的操作，我们建议 使用 [关联表](relation_guide-{{segment_code}}.html#使用关联表实现多对多关系) 来构建对象之间的关系。</div>
+<div class="callout callout-danger">对关联数据进行查询、排序等复杂操作，建议使用 [关联表](relation_guide-{{segment_code}}.html#使用关联表实现多对多关系) 来构建对象之间的关系。</div>
 
 对象可以与其他对象相联系。如前面所述，我们可以把一个 `{{baseObjectName}}` 的实例 A，当成另一个 `{{baseObjectName}}` 实例 B 的属性值保存起来。这可以解决数据之间一对一或者一对多的关系映射，就像关系型数据库中的主外键关系一样。
 
