fix: [存储] 获取对象描述错误 ObjectId > AVObject (#1788)
修复「使用关联表实现多对多关系」链接错误
恢复 callout 中的链接的颜色

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -4,7 +4,6 @@
 @table-inner-radius: (@general-radius - 1);
 @bubble-color: #eee;
 @base-font-color:#333;
-@internal-link-color: #78909C;
 
 .header-link() {
   color: @brand-primary;
@@ -35,6 +34,9 @@ body {
     .dropdown_header;
     font-size: 12px;
     padding: 0;
+  }
+  .callout-danger a, .callout-info a {
+    color: @brand-primary;
   }
 
   .img-bordered {
