chore: 外链图片统一放入 images 目录 (#1799)
* chore: 外链图片统一放入 images 目录

* add test cases for _helper.njk

--- a/views/_helper.njk
+++ b/views/_helper.njk
@@ -18,3 +18,11 @@
     <div class="callout callout-{{type}}">{{ content | safe }}</div>
   {%- endif %}
 {% endmacro %}
+
+{% macro mustache(name,tag="code",attributes="") -%}
+  <{{tag}} ng-non-bindable {{ objectStringify(attributes) }}>{% raw %}{{{% endraw %}{{name}}{% raw %}}}{% endraw %}</{{tag}}>
+{%- endmacro %}
+
+{% macro objectStringify(obj) -%}
+  {% for key, value in obj %} {{key}}="{{value}}"{% endfor %}
+{%- endmacro %}
