--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -229,7 +229,7 @@
 
 当然，LeanCloud 也已经提供了便捷的可视化的操作。打开 **控制台** > **存储** > **Post** > **其他** > **权限设置**，如下图所示：
 
-![acl_in_console](http://ac-lhzo7z96.clouddn.com/1442281757400)
+![acl_in_console](images/console-acl-superadmin.png)
 
 * 在这里你可以设置某一个角色对 `Post` 的操作权限：选择 **指定用户**，在指定角色中输入 `superAdmin`，并且点击添加即可。
 
