fix: 解决 mustache 变量渲染失败 (#1801)

--- a/views/acl_quick_start.tmpl
+++ b/views/acl_quick_start.tmpl
@@ -1,6 +1,7 @@
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
+{% import "views/_helper.njk" as docs %}
 
 # 权限管理快速指南 &middot; {{platform_name}}
 
