--- a/views/_helper.njk
+++ b/views/_helper.njk
@@ -9,20 +9,42 @@
   {{ callout(paragraph(content),"danger") | safe }}  
 {%- endmacro %}
 
+{% macro alerts() -%}
+  {{ callout(paragraph(caller()),"danger") | safe }}  
+{%- endmacro %}
+
 {% macro note(content) -%}
   {{ callout(paragraph(content),"info") | safe }}  
 {%- endmacro %}
 
+{% macro notes() -%}
+  {{ callout(paragraph(caller()),"info") | safe }}  
+{%- endmacro %}
+
 {% macro callout(content, type) %}
   {% if content | trim != "" -%}
-    <div class="callout callout-{{type}}">{{ content | safe }}</div>
+    <div class="callout callout-{{type}}">{{ content | replace(r/<p><\/p>/g,"") | safe }}</div>
   {%- endif %}
 {% endmacro %}
 
-{% macro mustache(name,tag="code",attributes="") -%}
-  <{{tag}} ng-non-bindable {{ objectStringify(attributes) }}>{% raw %}{{{% endraw %}{{name}}{% raw %}}}{% endraw %}</{{tag}}>
+{% macro mustache(name, tag="code", attrs={"ng-non-bindable": null}) -%}
+  {% if tag | trim != "" -%}
+    {{ htmlTag(tag, attrs, "{{" + name + "}}") }}
+  {%- else -%}
+    {% raw %}{{{% endraw %}{{name}}{% raw %}}}{% endraw %}
+  {%- endif %}
+{%- endmacro %}
+
+{% macro htmlTag(name="", attrs="", slot="") -%}
+  {% if name | trim != "" -%}
+    <{{name}} {{ objectStringify(attrs) | trim }}>{{ slot | safe }}</{{name}}>
+  {%- else -%}
+    {{ slot | safe }}
+  {%- endif %}
 {%- endmacro %}
 
 {% macro objectStringify(obj) -%}
-  {% for key, value in obj %} {{key}}="{{value}}"{% endfor %}
+  {% for key, value in obj -%}
+    {% if value == null %}{{key}} {% else %}{{key}}="{{value}}" {% endif %}
+  {%- endfor %}
 {%- endmacro %}
