feat: 增加文档修改日期 (#1816)
* feat: 增加文档修改日期

将修改 Title 和设置首页内容分类导航的任务从 jQuery 中分割出来

* must use event 'load' to make nav work as expected

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -814,6 +814,7 @@ ul#toc,#toc li {
     color: #000;
     font-size: 24px;
     vertical-align: -3px;
+    margin-right: 4px;
   }
 
   a {
@@ -827,6 +828,16 @@ ul#toc,#toc li {
     &:hover,
     &:focus {
       color: #000;
+    }
+  }
+
+  .doc-mdate {
+    color: @gray-light;
+    margin-left: 4px;
+    
+    &:before {
+      content:"·";
+      margin-right: 4px;
     }
   }
 }
