fix: [聊天] 增加控制台可测试签名的说明 (#1817)
Closes #1810

--- a/views/_navs.njk
+++ b/views/_navs.njk
@@ -1,5 +1,20 @@
+{% set baseUrl = "/dashboard/" %}
+{% set navs = {
+  "控制台":
+    "消息": {
+      "实时消息": {
+        "用户": "links"
+      }
+    }
+  
+} %}
+
 {% macro nav(key, label="") %}
 
 {{ node }}
 if label else display level/depth/tree nodes
 {% endmacro %}
+{# 
+控制台.消息.实时消息.用户
+
+#}
