fix: [存储] JS - AV.Relation 示例代码错误 Todo => Tag (#1824)
* fix: [存储] JS - AV.Relation 示例代码错误 Todo => Tag

其他语言版没有错误，都用的是 Tag

* update punctuations

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -593,7 +593,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% block code_create_tag_object %}{% endblock %}
 
-而 Tag 的意义在于一个 TodoFolder 可以拥有多个 Tag，比如「家庭」（TodoFolder） 拥有的 Tag 可以是：今日必做，老婆吩咐，十分重要。实现创建「家庭」这个 TodoFolder 的代码如下：
+而 Tag 的意义在于一个 TodoFolder 可以拥有多个 Tag，比如「家庭」（TodoFolder） 拥有的 Tag 可以是：今日必做、老婆吩咐、十分重要。实现创建「家庭」这个 TodoFolder 的代码如下：
 
 {% block code_create_family_with_tag %}{% endblock %}
 
