fix: [云引擎·微信公众号开发]  更新与 CLI 相关的命令 (#1823)
Closes  #1822

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -165,7 +165,7 @@ isHome: true
           <li><a href="https://forum.leancloud.cn/t/leanengine/8426" target="_blank">云引擎最佳实践 &middot; 用户系统〖稀土〗</a></li>
           <li><a href="https://blog.leancloud.cn/4133/" target="_blank">使用 New Relic 监控云引擎应用的性能</a></li>
           <li><a href="https://zhuanlan.zhihu.com/p/21399155" target="_blank">快速开发聊天机器人</a></li>
-          <li><a href="tutorials.html#打造我的微信客服">打造我的微信客服</a></li>
+          <li><a href="webhosting_weixin.html">打造我的微信客服</a></li>
           <li><a href="pay-beecloud.html">为网站加入收款功能</a></li>
         </ul>
         <h3>相关阅读</h3>
