feat(template): basic multilingual support

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -148,6 +148,10 @@ body {
     }
   }
 
+  var {
+    font-style: normal;
+  }
+
   .callout-info {
     color: #666;
     background-color: #f2f2f2;
@@ -834,7 +838,7 @@ ul#toc,#toc li {
   .doc-mdate {
     color: @gray-light;
     margin-left: 4px;
-    
+
     &:before {
       content:"·";
       margin-right: 4px;
