fix: change the nuget config. (#1830)
* fix: change the nuget config.

* fix: nuget fix link.

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -109,11 +109,11 @@
 <div class="desc"> 
     <p> 
       自 2016 年 12 月起，.NET SDK 将统一代码并且按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。 
-      <a href="https://www.nuget.org/packages/LeanCloud.Core/">Install via nuget</a> 
+      <a href="https://www.nuget.org/packages/LeanCloud/">Install LeanCloud .NET SDK via nuget</a> 
     </p> 
   </div> 
   <ul class="list-unstyled list-inline download-btns"> 
-    <li> <a href="https://www.nuget.org/packages/LeanCloud.Core/" class="btn btn-sm btn-primary"> .NET SDK </a></li> 
+    <li> <a href="https://www.nuget.org/packages/LeanCloud/" class="btn btn-sm btn-primary"> .NET SDK </a></li> 
   </ul> 
 </div> 
 <div class="dl-cell">
