fix: [数据模型] 整合版内容修订及导航更新 (#1839)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -71,13 +71,7 @@ isHome: true
             </ul>
           </li>
           <li>
-            <span>数据模型设计指南</span>
-            <ul class="list-unstyled list-platform">
-              <li><a href="relation_guide-android.html">Android</a></li>
-              <li><a href="relation_guide-objc.html">Objective-C</a></li>
-              <li><a href="relation_guide-js.html">JavaScript</a></li>
-              <li><a href="relation_guide-python.html">Python</a></li>
-            </ul>
+            <span><a href="relation-guide.html">数据模型设计指南</a></span>
           </li>
           <li>权限管理使用指南
             <ul class="list-unstyled list-platform">
