--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -32,7 +32,7 @@
             <li><a href="chatkit-ios.html">ChatKit 使用指南</a></li>
             <li><a href="livekit-ios.html">LiveKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="relation_guide-objc.html">数据模型设计指南</a></li>
+            <li><a href="relation-guide.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-objc.html">权限管理使用指南</a></li>
             <li><a href="ios_statistics.html">统计分析开发指南</a></li>
             {% if node != 'qcloud' and node != 'us' %}
@@ -62,7 +62,7 @@
             <li><a href="chatkit-android.html">ChatKit 使用指南</a></li>
             <li><a href="livekit-android.html">LiveKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="relation_guide-android.html">数据模型设计指南</a></li>
+            <li><a href="relation-guide.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
             {% if node != 'qcloud' and node != 'us' %}
@@ -82,7 +82,7 @@
             <li><a href="leanstorage_guide-js.html#Push_通知">消息推送开发指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
-            <li><a href="relation_guide-js.html">数据模型设计指南</a></li>
+            <li><a href="relation-guide.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
             {% if node != 'qcloud' and node != 'us' %}
             <li><a href="sms_guide-js.html">短信服务使用指南</a></li>
@@ -116,7 +116,7 @@
           <ul class="dropdown-menu">
             <li><a href="sdk_setup-python.html">SDK 安装指南</a></li>
             <li><a href="leanstorage_guide-python.html">数据存储开发指南</a></li>
-            <li><a href="relation_guide-python.html">数据模型设计指南</a></li>
+            <li><a href="relation-guide.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-python.html">权限管理使用指南</a></li>
             <li><a href="https://leancloud.readthedocs.io/" target="_blank">SDK API</a></li>
             <li role="separator" class="divider"></li>
