--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -263,7 +263,8 @@ INSERT INTO Todo (title, content) VALUES ('工程师周会', '每周工程师会
 ### 关联数据
 
 #### `{{relationObjectName}}`
-<div class="callout callout-danger">对关联数据进行查询、排序等复杂操作，建议使用 [关联表](relation_guide-{{segment_code}}.html#使用关联表实现多对多关系_推荐_) 来构建对象之间的关系。</div>
+
+{{ docs.alert("对关联数据进行查询、排序等复杂操作，建议使用 [中间表](relation-guide.html#使用中间表实现多对多关系_推荐_) 来构建对象之间的关系。") }}
 
 对象可以与其他对象相联系。如前面所述，我们可以把一个 `{{baseObjectName}}` 的实例 A，当成另一个 `{{baseObjectName}}` 实例 B 的属性值保存起来。这可以解决数据之间一对一或者一对多的关系映射，就像关系型数据库中的主外键关系一样。
 
@@ -601,7 +602,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% block code_query_todoFolder_with_tag %}{% endblock %}
 
-关于关联数据的建模是一个复杂的过程，很多开发者因为在存储方式上的选择失误导致最后构建查询的时候难以下手，不但客户端代码冗余复杂，而且查询效率低，为了解决这个问题，我们专门针对关联数据的建模推出了一个详细的文档予以介绍，详情请阅读 {{relation_guide_url}}。
+关于关联数据的建模是一个复杂的过程，很多开发者因为在存储方式上的选择失误导致最后构建查询的时候难以下手，不但客户端代码冗余复杂，而且查询效率低，为了解决这个问题，我们专门针对关联数据的建模推出了一个详细的文档予以介绍，详情请阅读《[数据模型设计指南](relation-guide.html)》。
 
 #### 关联属性查询
 正如在 [Pointer](#Pointer) 中保存 Comment 的 targetTodoFolder 属性一样，假如查询到了一些 Comment 对象，想要一并查询出每一条 Comment 对应的 TodoFolder 对象的时候，可以加上 include 关键字查询条件。同理，假如 TodoFolder 表里还有 pointer 型字段 targetAVUser 时，再加上一个递进的查询条件，形如 include(b.c)，即可一并查询出每一条 TodoFolder 对应的 AVUser 对象。代码如下：
