fix: [安装] SDK 安装文档增加语言/平台区分 (#1843)
Closes #1802

快速入门内容与安装文档重复，下线快速入门。

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -5,7 +5,7 @@
         {% if node=='qcloud' %}
         <li><a href="index.html">文档首页</a></li>
         {% endif %}
-        <li><a href="start.html">快速入门</a></li>
+        {#<li><a href="start.html">快速入门</a></li>#}
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">功能概览</a>
           <ul class="dropdown-menu">
@@ -101,6 +101,8 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">.NET / Unity3D</a>
           <ul class="dropdown-menu">
+            <li><a href="sdk_setup-wp.html">Windows Phone SDK 安装指南</a></li>
+            <li><a href="sdk_setup-unity.html">Unity3D SDK 安装指南</a></li>
             <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
             <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
             <li><a href="dotnet_push_guide.html">WP8.0 消息推送开发指南</a></li>
