--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -45,7 +45,19 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><a href="start.html">SDK 安装</a></li>
+          <li><span>SDK 安装</span>
+            <ul class="list-unstyled list-platform">
+              <li><a href="sdk_setup-android.html">Android</a></li>
+              <li><a href="sdk_setup-objc.html">Objective-C</a></li>
+              <li><a href="sdk_setup-js.html">JavaScript</a></li>
+              <li><a href="sdk_setup-python.html">Python</a></li>
+              <li><a href="sdk_setup-php.html">PHP</a></li>
+              <li><a href="sdk_setup-wp.html"><span style="font-size:11px;">Windows Phone</span></a></li>
+              <li><a href="sdk_setup-unity.html">Unity3D</a></li>
+              <li><a href="sdk_setup-java.html">Java</a></li>
+              <li><a href="sdk_setup-swift.html">Swift</a></li>
+            </ul>
+          </li>
           <li>
             <span>快速入门</span>
             <ul class="list-unstyled list-platform">
@@ -81,11 +93,6 @@ isHome: true
               <li><a href="acl_guide-python.html">Python</a></li>
             </ul>
           </li>
-          <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
-          <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
-          {% if node!='qcloud' %}
-          <li><a href="leaninsight_guide.html">离线数据分析使用指南</a></li>
-          {% endif %}
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
@@ -104,6 +111,12 @@ isHome: true
           <li><a href="faq_list.html">常见问题</a></li>
           <li><a href="error_code.html">错误码详解</a></li>
           <li><a href="rest_api.html">数据存储 REST API</a></li>
+          <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
+          <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
+          {%- if node!='qcloud' -%}
+          <li><a href="leaninsight_guide.html">离线数据分析使用指南</a></li>
+          {%- endif -%}
+          {% include 'templates/include/_sms.html' %}
         </ul>
       </div>
       <!-- end of .section-content -->
